# nodeshuttle-example

./: README.md  next.config.js  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Shuttle.toml
backend/migrations/: 20230301212502_schema.sql
backend/src/: lib.rs  main.rs  router.rs
src/: zustandStore.ts
src/components/: AuthedLayout.tsx  EditModal.tsx  GuestLayout.tsx
src/pages/: forgot.tsx  index.tsx  login.tsx  register.tsx
src/pages/dashboard/: create.tsx  index.tsx
src/styles/: globals.css
