[package]
name = "static-next-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["spa", "cookie-private"] }
bcrypt = "0.13.0"
http = "0.2.9"
lettre = "0.10.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
shuttle-secrets = "0.12.0"
shuttle-runtime = "0.12.0"
shuttle-axum = "0.12.0"
shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
shuttle-static-folder = "0.12.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
time = "0.3.20"
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = "1.26.0"
